intcodeasm/intcodeasm.output
Grammar

    0 $accept: program $end

    1 program: statement
    2        | statement statement

    3 label_definition: IDENTIFIER ':'

    4 optional_label: %empty
    5               | label_definition

    6 argument_expression: IDENTIFIER
    7                    | INTEGER

    8 bp_modifier: '+' argument_expression
    9            | '-' argument_expression

   10 relative_argument: '[' BP bp_modifier ']'

   11 absolute_argument: '[' argument_expression ']'

   12 immediate_argument: argument_expression

   13 argument: absolute_argument
   14         | relative_argument
   15         | immediate_argument

   16 labeled_argument: argument
   17                 | label_definition argument

   18 argument_list: labeled_argument
   19              | labeled_argument ',' argument_list

   20 instruction: MNEMONIC argument_list

   21 optional_instruction: %empty
   22                     | instruction

   23 instruction_statement: optional_label optional_instruction EOL

   24 di_statement: optional_label DI argument_list EOL

   25 statement: instruction_statement
   26          | di_statement


Terminals, with rules where they appear

    $end (0) 0
    '+' (43) 8
    ',' (44) 19
    '-' (45) 9
    ':' (58) 3
    '[' (91) 10 11
    ']' (93) 10 11
    error (256)
    MNEMONIC (258) 20
    IDENTIFIER (259) 3 6
    BP (260) 10
    DI (261) 24
    INTEGER (262) 7
    EOL (263) 23 24


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    program (16)
        on left: 1 2
        on right: 0
    label_definition (17)
        on left: 3
        on right: 5 17
    optional_label (18)
        on left: 4 5
        on right: 23 24
    argument_expression (19)
        on left: 6 7
        on right: 8 9 11 12
    bp_modifier (20)
        on left: 8 9
        on right: 10
    relative_argument (21)
        on left: 10
        on right: 14
    absolute_argument (22)
        on left: 11
        on right: 13
    immediate_argument (23)
        on left: 12
        on right: 15
    argument (24)
        on left: 13 14 15
        on right: 16 17
    labeled_argument (25)
        on left: 16 17
        on right: 18 19
    argument_list (26)
        on left: 18 19
        on right: 19 20 24
    instruction (27)
        on left: 20
        on right: 22
    optional_instruction (28)
        on left: 21 22
        on right: 23
    instruction_statement (29)
        on left: 23
        on right: 25
    di_statement (30)
        on left: 24
        on right: 26
    statement (31)
        on left: 25 26
        on right: 1 2


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 4 (optional_label)

    program                go to state 2
    label_definition       go to state 3
    optional_label         go to state 4
    instruction_statement  go to state 5
    di_statement           go to state 6
    statement              go to state 7


State 1

    3 label_definition: IDENTIFIER . ':'

    ':'  shift, and go to state 8


State 2

    0 $accept: program . $end

    $end  shift, and go to state 9


State 3

    5 optional_label: label_definition .

    $default  reduce using rule 5 (optional_label)


State 4

   23 instruction_statement: optional_label . optional_instruction EOL
   24 di_statement: optional_label . DI argument_list EOL

    MNEMONIC  shift, and go to state 10
    DI        shift, and go to state 11

    $default  reduce using rule 21 (optional_instruction)

    instruction           go to state 12
    optional_instruction  go to state 13


State 5

   25 statement: instruction_statement .

    $default  reduce using rule 25 (statement)


State 6

   26 statement: di_statement .

    $default  reduce using rule 26 (statement)


State 7

    1 program: statement .
    2        | statement . statement

    IDENTIFIER  shift, and go to state 1

    $end      reduce using rule 1 (program)
    $default  reduce using rule 4 (optional_label)

    label_definition       go to state 3
    optional_label         go to state 4
    instruction_statement  go to state 5
    di_statement           go to state 6
    statement              go to state 14


State 8

    3 label_definition: IDENTIFIER ':' .

    $default  reduce using rule 3 (label_definition)


State 9

    0 $accept: program $end .

    $default  accept


State 10

   20 instruction: MNEMONIC . argument_list

    IDENTIFIER  shift, and go to state 15
    INTEGER     shift, and go to state 16
    '['         shift, and go to state 17

    label_definition     go to state 18
    argument_expression  go to state 19
    relative_argument    go to state 20
    absolute_argument    go to state 21
    immediate_argument   go to state 22
    argument             go to state 23
    labeled_argument     go to state 24
    argument_list        go to state 25


State 11

   24 di_statement: optional_label DI . argument_list EOL

    IDENTIFIER  shift, and go to state 15
    INTEGER     shift, and go to state 16
    '['         shift, and go to state 17

    label_definition     go to state 18
    argument_expression  go to state 19
    relative_argument    go to state 20
    absolute_argument    go to state 21
    immediate_argument   go to state 22
    argument             go to state 23
    labeled_argument     go to state 24
    argument_list        go to state 26


State 12

   22 optional_instruction: instruction .

    $default  reduce using rule 22 (optional_instruction)


State 13

   23 instruction_statement: optional_label optional_instruction . EOL

    EOL  shift, and go to state 27


State 14

    2 program: statement statement .

    $default  reduce using rule 2 (program)


State 15

    3 label_definition: IDENTIFIER . ':'
    6 argument_expression: IDENTIFIER .

    ':'  shift, and go to state 8

    $default  reduce using rule 6 (argument_expression)


State 16

    7 argument_expression: INTEGER .

    $default  reduce using rule 7 (argument_expression)


State 17

   10 relative_argument: '[' . BP bp_modifier ']'
   11 absolute_argument: '[' . argument_expression ']'

    IDENTIFIER  shift, and go to state 28
    BP          shift, and go to state 29
    INTEGER     shift, and go to state 16

    argument_expression  go to state 30


State 18

   17 labeled_argument: label_definition . argument

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 16
    '['         shift, and go to state 17

    argument_expression  go to state 19
    relative_argument    go to state 20
    absolute_argument    go to state 21
    immediate_argument   go to state 22
    argument             go to state 31


State 19

   12 immediate_argument: argument_expression .

    $default  reduce using rule 12 (immediate_argument)


State 20

   14 argument: relative_argument .

    $default  reduce using rule 14 (argument)


State 21

   13 argument: absolute_argument .

    $default  reduce using rule 13 (argument)


State 22

   15 argument: immediate_argument .

    $default  reduce using rule 15 (argument)


State 23

   16 labeled_argument: argument .

    $default  reduce using rule 16 (labeled_argument)


State 24

   18 argument_list: labeled_argument .
   19              | labeled_argument . ',' argument_list

    ','  shift, and go to state 32

    $default  reduce using rule 18 (argument_list)


State 25

   20 instruction: MNEMONIC argument_list .

    $default  reduce using rule 20 (instruction)


State 26

   24 di_statement: optional_label DI argument_list . EOL

    EOL  shift, and go to state 33


State 27

   23 instruction_statement: optional_label optional_instruction EOL .

    $default  reduce using rule 23 (instruction_statement)


State 28

    6 argument_expression: IDENTIFIER .

    $default  reduce using rule 6 (argument_expression)


State 29

   10 relative_argument: '[' BP . bp_modifier ']'

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35

    bp_modifier  go to state 36


State 30

   11 absolute_argument: '[' argument_expression . ']'

    ']'  shift, and go to state 37


State 31

   17 labeled_argument: label_definition argument .

    $default  reduce using rule 17 (labeled_argument)


State 32

   19 argument_list: labeled_argument ',' . argument_list

    IDENTIFIER  shift, and go to state 15
    INTEGER     shift, and go to state 16
    '['         shift, and go to state 17

    label_definition     go to state 18
    argument_expression  go to state 19
    relative_argument    go to state 20
    absolute_argument    go to state 21
    immediate_argument   go to state 22
    argument             go to state 23
    labeled_argument     go to state 24
    argument_list        go to state 38


State 33

   24 di_statement: optional_label DI argument_list EOL .

    $default  reduce using rule 24 (di_statement)


State 34

    8 bp_modifier: '+' . argument_expression

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 16

    argument_expression  go to state 39


State 35

    9 bp_modifier: '-' . argument_expression

    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 16

    argument_expression  go to state 40


State 36

   10 relative_argument: '[' BP bp_modifier . ']'

    ']'  shift, and go to state 41


State 37

   11 absolute_argument: '[' argument_expression ']' .

    $default  reduce using rule 11 (absolute_argument)


State 38

   19 argument_list: labeled_argument ',' argument_list .

    $default  reduce using rule 19 (argument_list)


State 39

    8 bp_modifier: '+' argument_expression .

    $default  reduce using rule 8 (bp_modifier)


State 40

    9 bp_modifier: '-' argument_expression .

    $default  reduce using rule 9 (bp_modifier)


State 41

   10 relative_argument: '[' BP bp_modifier ']' .

    $default  reduce using rule 10 (relative_argument)
